Revert "BLS Stopgap measure"
This reverts commit a6b1ba5af9d8644a2762448bf20461000e21f3ba.

--- a/src/layouts/explainer/sections/national-debt/growing-national-debt/debt-trends-over-time/debt-trends-over-time-chart.module.scss
+++ b/src/layouts/explainer/sections/national-debt/growing-national-debt/debt-trends-over-time/debt-trends-over-time-chart.module.scss
@@ -95,11 +95,9 @@
 }
 
 @media screen and (max-width: $breakpoint-lg - 1) {
-  .container {
-    font-size: $font-size-10;
-    padding: 14px;
-    margin-top: 2rem;
-  }
+  font-size: $font-size-10;
+  padding: 14px;
+  margin-top: 2rem;
 
   .lineChartContainer {
     max-width: 464px;
